package com.initsys.sigal.protocol;

message SviRioQueryRequest {
  optional string msisdn       = 1;

  extensions 1000 to 9999;  
}

message SviRioQueryResponse {
  optional string msisdn       = 1;
  optional string rio          = 2;
  optional string date         = 3;

  extensions 1000 to 9999;  
}

message SmsSendRequest {
  required string uri          = 10;
  required string action       = 20;
  required SmsData data        = 30;

  extensions 1000 to 9999;  
}

message SmsData {
  required string msisdn       = 10; 
  required string text         = 20; 

  extensions 1000 to 9999;  
}

message SmsServerAck {
  optional uint32 status       = 10;
  optional string message      = 11;

  extensions 1000 to 9999;  
}
  

